--- a/src/assets/sass/components/_content_elements.scss
+++ b/src/assets/sass/components/_content_elements.scss
@@ -139,7 +139,6 @@ img.full-width {
 			content: '';
 			display: inline-block;
 			height: 100%;
-			width:1px;
 			vertical-align: middle;
 			margin-right: -1px;
 		}
